--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-camel.springboot.main-run-controller=true
-spring.application.name=CamelSpringBootSample
+#camel.springboot.main-run-controller=true
+camel.springboot.name=CamelSpringBootSample
 
 spring.profiles.active=dev
